<resources>
    <string name="app_name" translatable="false">core</string>
    <string name="android_key" translatable="false">970288516370238</string>
    <string name="facebook_app_id">970288516370238</string>
    <string name="fb_login_protocol_scheme">fb970288516370238</string>
    <string name="No_network_connection">Không có kết nối internet</string>
    <string name="Internal_error">Lỗi kết nối, Vui lòng thử lại</string>
    <string name="Loading">Đang tải dữ liệu …</string>
    <string name="Retry">Thử lại</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Hủy</string>
    <string name="Close">Đóng</string>
    <string name="Clear">Xóa</string>
    <string name="Undo">Quay lại</string>
    <string name="Required_field">Yêu cầu bắt buộc</string>
    <string name="The_entries_must_match">Nội dung phải ăn khớp</string>
    <string name="Content_is_empty">Nội dung trống.</string>
    <string name="Select_shop">Vui lòng lựa chọn quốc gia</string>
    <string name="Select_the_country_where_you_want_to_shop">Lựa chọn quốc gia nơi bạn muốn mua sắm</string>
    <string name="Continue">Tiếp tục</string>
    <string name="btn_get_involved_caption">Open Source - Get involved...</string>
    <string name="dialog_device_not_supported_title">Unsupported Device detected!</string>
    <string name="dialog_device_not_supported_message">Your device isn\'t supported by <b>AndEngine</b>!\n\nPlease send your device information to nicolasgramlich@gmail.com so that we can hopefully add support in the next release!</string>
    <string name="dialog_first_app_launch_title">AndEngine - Examples</string>
    <string name="dialog_first_app_launch_message">Welcome to <b>AndEngine</b> the:\n - Free\n - Open Source\n - 2D OpenGL \n - Game-Engine\nfor the Google Android platform.\n\nThese <b>examples</b> are meant for <b>developers</b> to showcase what can be done with <b>AndEngine</b>.\n\nIt\'s Open Source - Get involved!\n\nBest Regards,\nNicolas Gramlich</string>
    <string name="dialog_new_in_this_version_title">New in this version...</string>
    <string name="dialog_benchmark_submit_title">Submitting Result...</string>
    <string name="dialog_benchmark_submit_message">Please wait a moment...</string>
    <string name="dialog_benchmarks_submit_please_title">Benchmarks</string>
    <string name="dialog_benchmarks_submit_please_message">Hi,\n\nmaybe you already noticed that the <b>AndEngineExamples</b> contain some <b>Benchmarks</b>.\n\nThe reason for that is that I am building a public <b>Performance-Database</b> that everyone can access and use for i.e. a feasibility analysis.\n\nSo please submit Benchmarks from all your devices and from time to time when there is a new version of AndEngine, so I can analyze if the tweaks I added were for the good or for the bad ;)\n\nBest Regards,\nNicolas</string>
    <string name="dialog_modplayerexample_loading_to_external_title">Loading</string>
    <string name="dialog_modplayerexample_loading_to_external_message">Transferring \'lepeltheme.mod\' to SDCard...</string>
    <string name="tv_xmllayoutexample_above">You can put <b>one</b> <i>AndEngine</i> View into any Activity.</string>
    <string name="tv_xmllayoutexample_below">Lorem ipsum dolor sit amat...</string>
    <string name="textbreakexample_text_default">Hello, World!</string>
    <string name="Another_click_for_leaving_app">Nhấn vào khu vực khác để rời khỏi ứng dụng</string>
    <string name="All_categories">Tất cả các danh mục</string>
    <string name="menu_action_search">Tìm kiếm</string>
    <string name="Type_your_wish">Kiểu mong muốn của bạn</string>
    <string name="menu_action_cart">Giỏ hàng</string>
    <string name="menu_action_wishlist">Wishlist</string>
    <string name="Just_arrived">Trang chủ</string>
    <string name="No_banners">Không có banner</string>
    <string name="Show_offers">Hiển thị phiếu mua hàng</string>
    <string name="FILTER">LỌC</string>
    <string name="Apply">Áp dụng</string>
    <string name="Restart">làm lại</string>
    <string name="Filter_unavailable">Filter is unavailable</string>
    <string name="Products_not_found">Không tìm thấy sản phẩm nào.</string>
    <string name="Product_not_found">Sản phẩm không có.</string>
    <string name="ADD_TO_CART">THÊM VÀO GIỎ HÀNG</string>
    <string name="SEND_TO_A_FRIEND">GỬI CHO BẠN BÈ</string>
    <string name="RECOMMENDED">LỜI KHUYÊN CHO BẠN</string>
    <string name="Select_size">Chọn kích thước</string>
    <string name="Product">Sản phẩm</string>
    <string name="All">Tất cả</string>
    <string name="Recommended">Lời khuyên cho bạn</string>
    <string name="Whats_new">Có gì mới</string>
    <string name="Highest_price">Giá cao nhất</string>
    <string name="Lowest_price">Giá thấp nhất</string>
    <string name="Unknown_user">Khách</string>
    <string name="Profile">Hồ sơ</string>
    <string name="Name_colon">Tên:</string>
    <string name="Address_colon">Địa chỉ:</string>
    <string name="Email_colon">Email:</string>
    <string name="Phone_colon">Số điện thoại:</string>
    <string name="Account">Tài khoản</string>
    <string name="Email">Email</string>
    <string name="Phone">Số điện thoại</string>
    <string name="Street">Đường</string>
    <string name="House_code">Số nhà</string>
    <string name="City">Thành phố</string>
    <string name="ZIP">Mã bưu điện</string>
    <string name="Changing_the_password">Thay đổi mật khẩu</string>
    <string name="Password">Mật khẩu</string>
    <string name="New_password">Mật khẩu mới</string>
    <string name="Password_again">Nhập lại mật khẩu</string>
    <string name="Change_password">Thay đổi mật khẩu</string>
    <string name="Save">Lưu lại</string>
    <string name="My_orders">Đơn hàng của tôi</string>
    <string name="Branches">Chi nhánh</string>
    <string name="Settings">Cài đặt</string>
    <string name="Log_in">Đăng nhập</string>
    <string name="Log_out">Đăng xuất</string>
    <string name="Log_in_to_shop_via">Đặng nhập để mua sắm</string>
    <string name="Log_in_to_shop_via_email">Đăng nhập bằng email</string>
    <string name="Dont_have_an_account">Tôi không có tài khoản ?</string>
    <string name="Skip">Bỏ qua</string>
    <string name="Forgot_your_password">Tôi quên mật khẩu?</string>
    <string name="Email_for_recovery">Email khôi phục</string>
    <string name="Reset">Làm lại</string>
    <string name="Log_me_in">Log me in</string>
    <string name="E_MAIL">E-MAIL</string>
    <string name="FACEBOOK">FACEBOOK</string>
    <string name="Register">Đăng ký</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="Check_your_email_we_sent_you_an_confirmation_email">Vui lòng kiểm tra email. Chúng tôi vừa gửi cho bạn một email xác nhận về lấy lại mật khẩu</string>
    <string name="Facebook_login_failed">Đăng nhập Facebook không thành công.</string>
    <string name="Receiving_facebook_profile_failed">Nhận hồ sơ facebook không thành công</string>
    <string name="Oops_login_expired">Quá trình đăng nhập đã hết hạn</string>
    <string name="Your_session_has_expired_Please_log_in_again">Phiên của bạn đã hết hạn Vui lòng đăng nhập lại.</string>
    <string name="Shopping_cart">Giỏ hàng</string>
    <string name="Your_cart_is_empty">Giỏ hàng của bạn trống</string>
    <string name="START_SHOPPING">BẮT ĐẦU MUA SẮM</string>
    <string name="SHIPPING_AND_PAYMENT">Vận chuyển và thanh toán</string>
    <string name="Please_select_a_size">Vui lòng lựa chọn kích thước.</string>
    <string name="added_to_cart">Thêm vào giỏ hàng</string>
    <string name="adding_to_cart">Đang thêm vào giỏ hàng</string>
    <string name="Go_to_cart">Đi đến giỏ hàng</string>
    <string name="Delete">Xóa</string>
    <string name="Edit">Sửa</string>
    <string name="Update_item">Cập nhật:</string>
    <string name="The_item_has_been_successfully_removed">Mục đã được xóa thành công</string>
    <string name="Discount_code">Mã giảm giá</string>
    <string name="Do_you_have_a_discount_code">Bạn có mã giảm giá không?</string>
    <string name="Enter_the_discount_code">Nhập mã giảm giá</string>
    <string name="Internal_error_reload_cart_please">Lỗi bên trong.Vui lòng tải lại giỏ hàng.</string>
    <string name="Order">Đơn hàng</string>
    <string name="Order_colon">Đơn hàng:</string>
    <string name="Date_created">Ngày tạo</string>
    <string name="Date_created_colon">Ngày tạo</string>
    <string name="Total_price">Tổng tiền</string>
    <string name="Order_summary">Tổng quan đơn hàng</string>
    <string name="Order_history">Lịch sử đơn hàng</string>
    <string name="Your_orders_history_is_empty">Lịch sử đơn hàng trống</string>
    <string name="Order_details">Chi tiết đơn hàng</string>
    <string name="Shipping">Vận chuyển</string>
    <string name="Payment">Thanh toán</string>
    <string name="Shipping_method">Phương thức vận chuyển</string>
    <string name="Choose_shipping_method">Chọn phương thức vận chuyển</string>
    <string name="Choose_payment_method">Chọn Phương thức thanh toán</string>
    <string name="Shipping_details">Chi tiết vận chuyển</string>
    <string name="Note">Ghi chú</string>
    <string name="Click_on_Order_to_allow_our_Terms_and_Conditions">Nhấp vào Đặt hàng để cho phép chúng tôi <![CDATA[<b><font color=#ee1f65>Các điều khoản và điều kiện</b>]]></string>
    <string name="Finish_order">Kết thúc đơn hàng</string>
    <string name="Shipping_is_empty">Không có vân chuyển</string>
    <string name="Personal_pickup">Personal pickup</string>
    <string name="Shipping_type_colon">Loại vận chuyển:</string>
    <string name="Shipping_price_colon">Giá vận chuyển:</string>
    <string name="free">Miễn phí</string>
    <string name="Summary">Tổng quan</string>
    <string name="Total_colon">Tổng:</string>
    <string name="Your_wishlist_is_empty">Danh sách mong muốn của bạn đang trống.</string>
    <string name="Wishlist">Danh sách</string>
    <string name="Product_deleted_from_wishlist">Đã xóa sản phẩm khỏi danh sách mong muốn</string>
    <string name="Product_added_to_wishlist">Đã thêm sản phẩm vào danh sách mong muốn</string>
    <string name="Go_to_wishlist">Đi tới danh sách mong muốn</string>
    <string name="Select">Lựa chọn</string>
    <string name="Open_source_libraries">Open source libraries</string>
    <string name="License_details_for_open_source_software">License details for open source software</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="Basic_information_about_Privacy_Policy">Basic information about Privacy Policy</string>
    <string name="App_needs_to_be_restarted">To change the shop an app restart is needed.</string>
    <string name="including_VAT">inc. VAT</string>
    <string name="Thank_you_for_your_order">Thank you for your order</string>
    <string name="Wait_for_sms_or_email_order_confirmation">Wait for &lt;b>SMS&lt;/b> or &lt;b>email&lt;/b> order confirmation.</string>
    <string name="This_is_a_sample_app">This is a sample app</string>
    <string name="Sample_app_description">Thank you for your time. To find out more about this project, please visit us here: <a href="http://openshop.io/">Openshop.io</a>.</string>
    <string name="Link_is_invalid">Link is invalid</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="format_space_prefix"> %1$s</string>
    <string name="format_comma_prefix">, %1$s</string>
    <string name="format_string_division">%1$s / %2$s</string>
    <string name="format_quantity">%1$d pcs</string>
    <string name="format_string_quantity">%1$s %2$dx</string>
    <string name="str_login">Đăng nhập</string>
    <string name="str_username">Tên đăng nhập</string>
    <string name="str_email">Email</string>
    <string name="str_retype_password">Nhập lại mật khẩu</string>
    <string name="str_remember_me">Duy trì trạng thái đăng nhập</string>
    <string name="str_register">Đăng ký</string>
</resources>