<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/check_box_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_remember_me" />

    <Button
        android:id="@+id/btn_login"
        style="@style/buttonSecondaryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:text="@string/str_login" />
</LinearLayout>
